# shop-blog-portal

./: .gitignore  README.md  pyproject.toml
shop_blog_portal/: app_connection.py
tests/: test_shop_blog_portal.py
